Se eliminaron imagenes que no se van a usar, se eliminaron secciones que tampoco van a estar el la página de inicio

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     
     <link href="css/styles.css" rel="stylesheet" type="text/css">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,37 +15,25 @@
 
   <body>
     <!--Hero section-->
-    <div class="hero">
-        <nav class="heroNav">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre mí</a></li>
-                <li><a href="#">Proyectos</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
+    <div class="menu">
+      <nav class="heroNav">
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Sobre mí</a></li>
+            <li><a href="#">Proyectos</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
 
+    <div class="hero">
         <div class="content">
-            <h4>¡Hola! <span>Mi nombre es</span></h4>
             <h1>María Hernández</h1>
-            <h3>Soy desarrolladora de software</h3>
-            <a class="btnCV" href="./pdf/testCV.pdf" download="MariaHernandezCV">Descargar CV</a>
+            <h3>Desarrolladora de software</h3>
+            <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 4 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
+            <a class="btnCV" href="#">Sobre mí</a>
+            <a class="btnCV" href="./pdf/testCV.pdf" download="MariaHernandezCV" target="_blank">Descargar CV</a>
         </div>
     </div>
-   
-     <!--Sobre mí section-->
-     <section class="about">
-      <div class="main">
-        <img src="./imgs/aboutMe.jpg">
-        <div class="about-text">
-          <h2>Sobre mí</h2>
-          <h5>Desarrolladora de software</h5>
-          <p>Soy desarrolladora de back end. Cuento con 4 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
-          <a class="btnCV" href="#">Sobre mí</a>
-          <a class="btnCV" href="./pdf/testCV.pdf" download="MariaHernandezCV">Descargar CV</a>
-        </div>
-      </div>
-    </section>
-
   </body>
 </html>
