icons added, and aboutme section

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>Portafolio profesional</title>
   </head>
 
-  <body>
+  <body class="indexBody">
     <!--Hero section-->
     <div class="menu">
       <nav class="heroNav">
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sobre mí</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="aboutMe.html">Sobre mí</a></li>
             <li><a href="#">Proyectos</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
@@ -31,9 +31,58 @@
             <h1>María Hernández</h1>
             <h3>Desarrolladora de software</h3>
             <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 4 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
-            <a class="btnCV" href="#">Sobre mí</a>
+            <a class="btnCV" href="aboutMe.html">Sobre mí</a>
             <a class="btnCV" href="./pdf/testCV.pdf" download="MariaHernandezCV" target="_blank">Descargar CV</a>
         </div>
+
+        <div class="social">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-dribbble"></i></a>
+        </div>
+
     </div>
+    
+    <section class="about">
+      <div class="aboutMe">
+        <div class="titleAM">
+          <h2>Sobre mí</h2>
+          <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 4 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
+        </div>
+
+        <div class="boxAM">
+          <h3>Habilidades Técnicas</h3>
+          <div class="box">
+            <div class="card">
+              <img src="../portafilioProfesional/imgs/icons/logotipo-de-java.png" alt="Back End">
+              <h5>Back End</h5>
+              <p>Java(Spring Boot), JUnit, Maven, C#, PHP. </p>
+            </div>
+            <div class="card">
+              <img src="../portafilioProfesional/imgs/icons/docker(1).png" alt="Docker">
+              <h5>DevOps</h5>
+              <p>Docker</p>
+            </div>
+            <div class="card">
+              <img src="../portafilioProfesional/imgs/icons/cloud-computing.png" alt="Cloud Computing">
+              <h5>Cloud Engineering</h5>
+              <p>AWS(EC2)</p>
+            </div>
+            <div class="card">
+              <img src="../portafilioProfesional/imgs/icons/ui-design(1).png" alt="Front End">
+              <h5>Front End</h5>
+            </div>
+            <div class="card">
+              <img src="../portafilioProfesional/imgs/icons/database.png" alt="Data Base">
+              <h5>Databases</h5>
+            </div>
+            <div class="card">
+              <img src="../portafilioProfesional/imgs/icons/continuous(1).png" alt="Continuous Integration">
+              <h5>Continuous Integration</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
