--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="content">
             <h1>María Hernández</h1>
             <h3>Desarrolladora de software</h3>
-            <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 4 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
+            <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 5 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
             <a class="btnCV" href="aboutMe.html">Sobre mí</a>
             <a class="btnCV" href="./pdf/testCV.pdf" download="MariaHernandezCV" target="_blank">Descargar CV</a>
         </div>
@@ -43,46 +43,48 @@
 
     </div>
     
-    <section class="about">
+    <!-- <section class="about">
       <div class="aboutMe">
         <div class="titleAM">
           <h2>Sobre mí</h2>
           <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 4 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
         </div>
 
-        <div class="boxAM">
+        <div class="grid">
           <h3>Habilidades Técnicas</h3>
-          <div class="box">
-            <div class="card">
-              <img src="../portafilioProfesional/imgs/icons/logotipo-de-java.png" alt="Back End">
-              <h5>Back End</h5>
-              <p>Java(Spring Boot), JUnit, Maven, C#, PHP. </p>
-            </div>
-            <div class="card">
-              <img src="../portafilioProfesional/imgs/icons/docker(1).png" alt="Docker">
-              <h5>DevOps</h5>
-              <p>Docker</p>
-            </div>
-            <div class="card">
-              <img src="../portafilioProfesional/imgs/icons/cloud-computing.png" alt="Cloud Computing">
-              <h5>Cloud Engineering</h5>
-              <p>AWS(EC2)</p>
-            </div>
-            <div class="card">
-              <img src="../portafilioProfesional/imgs/icons/ui-design(1).png" alt="Front End">
-              <h5>Front End</h5>
-            </div>
-            <div class="card">
-              <img src="../portafilioProfesional/imgs/icons/database.png" alt="Data Base">
-              <h5>Databases</h5>
-            </div>
-            <div class="card">
-              <img src="../portafilioProfesional/imgs/icons/continuous(1).png" alt="Continuous Integration">
-              <h5>Continuous Integration</h5>
-            </div>
+          <div class="card">
+            <img src="../portafilioProfesional/imgs/icons/logotipo-de-java(2).png" alt="Back End">
+            <h5>Back End</h5>
+            <p>Java(Spring Boot), C#, PHP, JUnit, Maven, Git </p>
+          </div>
+          <div class="card">
+            <img src="../portafilioProfesional/imgs/icons/docker(2).png" alt="Docker">
+            <h5>DevOps</h5>
+            <p>Contenerización con Docker</p>
+          </div>
+          <div class="card">
+            <img src="../portafilioProfesional/imgs/icons/cloud-computing(2).png" alt="Cloud Computing">
+            <h5>Cloud Engineering</h5>
+            <p>AWS(EC2, S3, RDS, Lambda)</p>
+          </div>
+          <div class="card">
+            <img src="../portafilioProfesional/imgs/icons/ui-design(2).png" alt="Front End">
+            <h5>Front End</h5>
+            <p>HTML, CSS, JavaScript, Angular, Android</p>
+          </div>
+          <div class="card">
+            <img src="../portafilioProfesional/imgs/icons/database(2).png" alt="Data Base">
+            <h5>Databases</h5>
+            <p>SQL(MySQL, Oracle)</p>
+            <p>NoSQL(MongoDB)</p>
+          </div>
+          <div class="card">
+            <img src="../portafilioProfesional/imgs/icons/continuous(2).png" alt="Continuous Integration">
+            <h5>Continuous Integration</h5>
+            <p>Jenkins</p>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
