added workExperience section

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,6 +38,7 @@
     
     <section class="tecSection"> 
         <h3>Habilidades Técnicas</h3>
+        <div class="line"></div>
         <div class="box">
           <div class="card">
             <img src="../portafilioProfesional/imgs/icons/logotipo-de-java(2).png" alt="Back End">
@@ -77,6 +78,7 @@
 
     <section class="softSkills">
         <h3>Habilidades blandas</h3>
+        <div class="line"></div>
         <div class="boxSoftSkills">
             <div class="skill"><p>Trabajo en equipo</p></div>
             <div class="skill"><p>Autogestión e iniciativa</p></div>
@@ -94,20 +96,29 @@
 
     <section class="workExperience">
         <h3>Experiencia laboral</h3>
+        <div class="line"></div>
         <div class="boxWork">
             <div class="work">
                 <h4>Advanced Software Engineer</h4>
                 <h5>Growth Acceleration Partners</h5>
-                <p></p>
+                <h6>2021-Presente</h6>
+                <p>
+                    Crear, mejorar o integrar programas y procesos para una o más soluciones y/o aplicaciones del cliente usando Java 8 y 11, Spring Boot, JUnit, Maven, MySQL, MongoDB.  
+                </p>
             </div>
             <div class="work">
                 <h4>Software Engineer</h4>
                 <h5>CIP Reporting</h5>
-                <p></p>
+                <h6>2018-2020</h6>
+                <p>Desarrollo de aplicaciones SAAS para el manejo de informes de incidencias en casinos, incidentes médicos e incidentes relacionados con la seguridad vial en el lenguaje propio de la empresa CIPS (JavaScript y PHP) y CIPQ (SQL).</p> 
+                <p>Colaboración en el diseño lógico del sistema para clientes de CIP, como líder técnico de dichos proyectos. </p>
+                <p>Diseño de reportes ejecutivos en software CIP usando BIRT. </p>
+                <p>Soporte a aplicaciones existentes: resolución de problemas o desarrollo de nuevas funcionalidades.</p>
             </div>
             <div class="work">
                 <h4>Technical Support</h4>
                 <h5>DXC Technology</h5>
+                <h6>2016-2018</h6>
                 <p>Soporte de nivel uno resolviendo dificultades técnicas relacionadas con hardware, software y aplicaciones tales como: Office, Windows, Outlook, conexión a Internet y aplicaciones internas.</p>
             </div>
         </div>
