aboutMe finished, added favicon

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
     <link href="css/aboutMe.css" rel="stylesheet" type="text/css">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -99,16 +100,16 @@
         <div class="line"></div>
         <div class="boxWork">
             <div class="work">
-                <h4>Advanced Software Engineer</h4>
-                <h5>Growth Acceleration Partners</h5>
+                <h4>Advanced Software Engineer <span>- Growth Acceleration Partners</span></h4>
+                <!-- <h5>Growth Acceleration Partners</h5> -->
                 <h6>2021-Presente</h6>
                 <p>
                     Crear, mejorar o integrar programas y procesos para una o más soluciones y/o aplicaciones del cliente usando Java 8 y 11, Spring Boot, JUnit, Maven, MySQL, MongoDB.  
                 </p>
             </div>
             <div class="work">
-                <h4>Software Engineer</h4>
-                <h5>CIP Reporting</h5>
+                <h4>Software Engineer <span>- CIP Reporting</span></h4>
+                <!-- <h5>CIP Reporting</h5> -->
                 <h6>2018-2020</h6>
                 <p>Desarrollo de aplicaciones SAAS para el manejo de informes de incidencias en casinos, incidentes médicos e incidentes relacionados con la seguridad vial en el lenguaje propio de la empresa CIPS (JavaScript y PHP) y CIPQ (SQL).</p> 
                 <p>Colaboración en el diseño lógico del sistema para clientes de CIP, como líder técnico de dichos proyectos. </p>
@@ -116,11 +117,63 @@
                 <p>Soporte a aplicaciones existentes: resolución de problemas o desarrollo de nuevas funcionalidades.</p>
             </div>
             <div class="work">
-                <h4>Technical Support</h4>
-                <h5>DXC Technology</h5>
+                <h4>Technical Support <span>- DXC Technology</span></h4>
+                <!-- <h5>DXC Technology</h5> -->
                 <h6>2016-2018</h6>
                 <p>Soporte de nivel uno resolviendo dificultades técnicas relacionadas con hardware, software y aplicaciones tales como: Office, Windows, Outlook, conexión a Internet y aplicaciones internas.</p>
             </div>
+        </div>
+    </section>
+
+    <section class="certificaciones">
+        <h3>Certificaciones</h3>
+        <div class="line"></div>
+        <div class="boxCurso">
+            <div class="curso">
+                <h4>CCNA Routing and Switching: Introducción a redes <span>- Cisco Networking Academy</span></h4>
+                <h6>05 mayo 2019</h6>
+            </div>
+            <div class="curso">
+                <h4>API Rest <span>- Platzi</span></h4>
+                <h6>15 setiembre 2021</h6>
+            </div>
+            <div class="curso">
+                <h4>Testing en Java <span>- Platzi</span></h4>
+                <h6>15 julio 2021</h6>
+            </div>
+        </div>
+        <h3>Idiomas</h3>
+        <div class="line"></div>
+        <div class="boxCurso">
+            <div class="curso">
+                <h4>Inglés </h4>
+                <h6>Intermedio/Avanzado</h6>
+            </div>
+            <div class="curso">
+                <h4>Francés</h4>
+                <h6>Avanzado</h6>
+            </div>
+            <div class="curso">
+                <h4>Español</h4>
+                <h6>Nativo</h6>
+            </div>
+        </div>
+        <h3>Referencias</h3>
+        <div class="line"></div>
+        <div class="boxCurso">
+            <div class="curso1">
+                <h6>Jorge Diaz</h6>
+                <h6>Software Engineer - Amazon</h6>
+                <p>El trabajo de María no solo estaba listo a tiempo y según las especificaciones, sino que también presta atención hasta los más pequeños detalles de su funcionalidad. Durante el tiempo que trabaje con ella, persiví es receptiva y está dispuesta a resolver los problemas a medida que surgen. Es obvio que se enorgullece enormemente de su trabajo, y no dudaría en recomendarla o trabajar con ella nuevamente.</p>
+            </div>
+            <div class="curso1">
+                <h6>Romer Ramirez</h6>
+                <h6>Technical Analyst - Infutur Data Solutions</h6>
+                <p>Ha sido un verdadero placer trabajar con María. Ha sido muy profesional y muy clara en todas las comunicaciones, He trabajado con ella en dos proyectos complejos y, en ambos casos, el trabajo se realizó a tiempo y con un alto grado de profesionalismo.</p>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Copyright © 2022 María Hernández</p>
         </div>
     </section>
   </body>
