--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,9 +19,9 @@
       <nav class="heroNav">
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="aboutMe.html">Sobre mí</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Sobre mí</a></li>
+            <li><a href="projects.html">Proyectos</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -34,7 +34,7 @@
             <p>Soy desarrolladora de software con 5 años de experiencia en desarrollo de aplicaciones. Actualmente trabajo como Advance Software Engineer en GAP Me concentro en el back end de las aplicaciones en Java.</p>
             <p>Cuento con amplia experiencia trabajando con Microservicios, Spring, REST API, pruebas utilizando entornos de prueba como JUnit y Mockito, conocimiento en varias soluciones de bases de datos, tanto SQL como no SQL, como MySQL, Oracle, MongoDB además de Spring JPA. </p>
         </div>
-        <a class="btnCV" href="./pdf/testCV.pdf" download="MariaHernandezCV" target="_blank">Descargar CV</a>
+        <a class="btnCV" href="./pdf/Maria_Hernandez_CV.pdf" download="MariaHernandezCV" target="_blank">Descargar CV</a>
     </div>
     
     <section class="tecSection"> 
@@ -126,7 +126,7 @@
     </section>
 
     <section class="certificaciones">
-        <h3>Certificaciones</h3>
+        <h3>Certificaciones / Idiomas</h3>
         <div class="line"></div>
         <div class="boxCurso">
             <div class="curso">
@@ -142,8 +142,8 @@
                 <h6>15 julio 2021</h6>
             </div>
         </div>
-        <h3>Idiomas</h3>
-        <div class="line"></div>
+        <!-- <h3>Idiomas</h3>
+        <div class="line"></div> -->
         <div class="boxCurso">
             <div class="curso">
                 <h4>Inglés </h4>
@@ -158,7 +158,23 @@
                 <h6>Nativo</h6>
             </div>
         </div>
-        <h3>Referencias</h3>
+        <!-- <h3 class="difh3">Referencias</h3>
+        <div class="line"></div>
+        <div class="boxCurso">
+            <div class="curso1">
+                <h6>Jorge Diaz</h6>
+                <h6>Software Engineer - Amazon</h6>
+                <p>El trabajo de María no solo estaba listo a tiempo y según las especificaciones, sino que también presta atención hasta los más pequeños detalles de su funcionalidad. Durante el tiempo que trabaje con ella, persiví es receptiva y está dispuesta a resolver los problemas a medida que surgen. Es obvio que se enorgullece enormemente de su trabajo, y no dudaría en recomendarla o trabajar con ella nuevamente.</p>
+            </div>
+            <div class="curso1">
+                <h6>Romer Ramirez</h6>
+                <h6>Technical Analyst - Infutur Data Solutions</h6>
+                <p>Ha sido un verdadero placer trabajar con María. Ha sido muy profesional y muy clara en todas las comunicaciones, He trabajado con ella en dos proyectos complejos y, en ambos casos, el trabajo se realizó a tiempo y con un alto grado de profesionalismo.</p>
+            </div>
+        </div> -->
+    </section>
+    <section class="referenciasSection">
+        <h3 class="difh3">Referencias</h3>
         <div class="line"></div>
         <div class="boxCurso">
             <div class="curso1">
