--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <!-- <link rel="shortcut icon" href="/imgs/favicon.ico" type="image/x-icon"> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Portafolio profesional</title>
   </head>
@@ -20,10 +19,10 @@
     <div class="menu">
       <nav class="heroNav">
         <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Inicio</a></li>
             <li><a href="aboutMe.html">Sobre mí</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="projects.html">Proyectos</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -34,59 +33,12 @@
             <h3>Desarrolladora de software</h3>
             <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 5 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
             <a class="btnCV" href="aboutMe.html">Sobre mí</a>
-            <a class="btnCV" href="./pdf/testCV.pdf" download="MariaHernandezCV" target="_blank">Descargar CV</a>
-        </div>
-
-        <div class="social">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-dribbble"></i></a>
-        </div>
-
+            <a class="btnCV" href="./pdf/Maria_Hernandez_CV.pdf" download="MariaHernandezCV" target="_blank">Descargar CV</a>
+            <div class="social">
+              <a href="https://www.linkedin.com/in/mar%C3%ADa-hern%C3%A1ndez-66b365120/"><img src="../portafilioProfesional/imgs/icons/linkedin(1).png" alt=""></a>
+            <a href="https://github.com/hmaria261991"><img src="../portafilioProfesional/imgs/icons/github(3).png" alt=""></a>
+            </div>
+       </div>       
     </div>
-    
-    <!-- <section class="about">
-      <div class="aboutMe">
-        <div class="titleAM">
-          <h2>Sobre mí</h2>
-          <p>Soy desarrolladora de software principalmente back end aunque también he realizado proyectos que incluyen el front end. Cuento con 4 años de experiencia principalmente en Java, pero también trabajé desarrollando aplicaciones en JavaScript y PHP, además he desarrollado aplicaciones móviles en Android. </p>
-        </div>
-
-        <div class="grid">
-          <h3>Habilidades Técnicas</h3>
-          <div class="card">
-            <img src="../portafilioProfesional/imgs/icons/logotipo-de-java(2).png" alt="Back End">
-            <h5>Back End</h5>
-            <p>Java(Spring Boot), C#, PHP, JUnit, Maven, Git </p>
-          </div>
-          <div class="card">
-            <img src="../portafilioProfesional/imgs/icons/docker(2).png" alt="Docker">
-            <h5>DevOps</h5>
-            <p>Contenerización con Docker</p>
-          </div>
-          <div class="card">
-            <img src="../portafilioProfesional/imgs/icons/cloud-computing(2).png" alt="Cloud Computing">
-            <h5>Cloud Engineering</h5>
-            <p>AWS(EC2, S3, RDS, Lambda)</p>
-          </div>
-          <div class="card">
-            <img src="../portafilioProfesional/imgs/icons/ui-design(2).png" alt="Front End">
-            <h5>Front End</h5>
-            <p>HTML, CSS, JavaScript, Angular, Android</p>
-          </div>
-          <div class="card">
-            <img src="../portafilioProfesional/imgs/icons/database(2).png" alt="Data Base">
-            <h5>Databases</h5>
-            <p>SQL(MySQL, Oracle)</p>
-            <p>NoSQL(MongoDB)</p>
-          </div>
-          <div class="card">
-            <img src="../portafilioProfesional/imgs/icons/continuous(2).png" alt="Continuous Integration">
-            <h5>Continuous Integration</h5>
-            <p>Jenkins</p>
-          </div>
-        </div>
-      </div>
-    </section> -->
   </body>
 </html>
